--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical"
     android:layout_margin="16dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/crime_datel">
 
     <TextView
         style="?android:listSeparatorTextViewStyle"
@@ -34,5 +35,10 @@
         android:layout_height="wrap_content"
         android:text="@string/crime_solved_label"/>
 
+    <Button
+        android:id="@+id/jump_to_first"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="jump_to_first" />
 
 </LinearLayout>
