--- a/app/src/main/res/layout/activity_crime_pager.xml
+++ b/app/src/main/res/layout/activity_crime_pager.xml
@@ -1,11 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.view.ViewPager
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
-    android:id="@+id/activity_crime_pager_view_pager">
+    android:orientation="vertical">
+
+        android:layout_width="match_parent"
+        android:layout_height="91dp"
+        android:padding="16dp">
+
+    <Button
+        android:id="@+id/btn_to_first"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="276dp"
+        android:text="跳到第一页"
+        app:layout_constraintStart_toStartOf="@+id/activity_crime_pager_view_pager"
+        app:layout_constraintTop_toTopOf="@+id/activity_crime_pager_view_pager" />
+
+    <Button
+        android:id="@+id/btn_to_last"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginTop="276dp"
+        android:layout_marginEnd="16dp"
+        android:text="跳到最后一页"
+        app:layout_constraintEnd_toEndOf="@+id/activity_crime_pager_view_pager"
+        app:layout_constraintTop_toTopOf="@+id/activity_crime_pager_view_pager" />
+
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="16dp"
+        android:id="@+id/activity_crime_pager_view_pager">
+
+    </android.support.v4.view.ViewPager>
 
 
-
-</android.support.v4.view.ViewPager>
+</android.support.constraint.ConstraintLayout>
